/*
 * $Id: ChangeLog,v 1.607 2009-08-24 01:47:19 declan2005 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-08-23 21:33 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_ipaddress.prg
  * source/cgrid.c
  * source/h_listbox.prg
  * source/h_tab.prg
  * source/h_status.prg
  * source/c_winapimisc.c
  * source/c_windows.c
  * source/c_dialogs.c
  * source/c_controlmisc.c
  * source/h_hotkeybox.prg
    !  in order to Run with Harbour 2.0.


2009-08-23 12:06 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_tab.prg
    ! Fixed shown page when current page is hidden.

2009-08-14 19:44 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
    - Removed horizontal scroll when record changes.
    * Changed SCROLL resolution from 100 to 1000.
    ! Fixed ::EOF value when DBSKIP at empty tables (fixed "blank
      row" painting).
  * include/i_radiogroup.ch
    ! Defined OPTIONS clause as optional, for a more flexible
      declaration in source code.
      NOTE: This clause is NOT optional!

2009-08-01 08:38 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_windows.c
  * source/h_form.prg
    ! Fixed MDI client area at MDI client creation.

2009-07-30 23:03 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_print.prg
    + added bin selection.

2009-07-26 14:09 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_form.prg
  * source/h_tab.prg
  * source/h_textbox.prg
  * source/h_windows.prg
    + Added ::AdjustResize() method for control-specific
      behaviour.

2009-07-25 23:09 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * image/i_textbox.ch
  * source/h_textbox.prg
    - Removed BTNTEXTBOX code from HMG Experimental.
    + Implemented embedded buttons for textbox controls using
      ooHG style.

2009-07-24 19:04 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>